# fastapi-kickstart

./: .coveragerc  .env_example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE.md  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  tasks.py
src/alembic/: env.py
src/alembic/versions/: 5cfe696e2a6f_add_initial_migration.py  def1c15f8f6f_add_initial_migration.py
src/api/: dependencies.py  main.py
src/api/routes/: __init__.py  auth.py  items.py  tasks.py  users.py
src/core/: celery_config.py  config.py  db.py  enums.py  error_messages.py  exceptions.py  security.py
src/models/: __init__.py  items.py  users.py
src/repositories/: base.py  item.py  user.py
src/schemas/: auth.py  items.py
src/services/: auth.py  base.py  item.py  item_service.py  user.py
src/tests/: conftest.py  factories.py
src/tests/api/: test_items.py
src/tests/services/: test_celery.py  test_items.py
